tests/negative/gold/parser_test.gold
tests/negative/parser_test.toit:7:3: error: Field 'field1' must be initialized in a constructor
  field1/string
  ^~~~~~
